--- a/Server/DogHub/DogHub.csproj
+++ b/Server/DogHub/DogHub.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
         <PropertyGroup>
                 <OutputType>Exe</OutputType>
@@ -8,8 +8,8 @@
         </PropertyGroup>
 
         <ItemGroup>
-          <PackageReference Include="DotNetEnv" Version="3.1.1" />
-          <PackageReference Include="Npgsql" Version="9.0.4" />
+                <PackageReference Include="DotNetEnv" Version="3.1.1" />
+                <PackageReference Include="Npgsql" Version="9.0.4" />
         </ItemGroup>
 
 </Project>
