--- a/Assets/.env.example
+++ b/Assets/.env.example
@@ -6,5 +6,5 @@ DB_NAME=doghub_db
 
 MAIL_USER=user@gmail.com
 MAIL_PASSWORD=app_password
-MAIL_FILE_PATH=./Assets/MailNotification.html
+MAIL_FILE_PATH=MailNotification.html
 MAIL_TIMEOUT=60
