--- a/Assets/.env.example
+++ b/Assets/.env.example
@@ -21,5 +21,5 @@ MAIL_PASSWORD=app_password      # app pass is different from email pass
 # To pass params see MailService/MailService.cs
 MAIL_FILE_PATH=MailNotification.html
 
-# Time between emails checks
+# Time in seconds between emails checks
 MAIL_TIMEOUT=60
