--- a/Assets/.env.example
+++ b/Assets/.env.example
@@ -1,12 +1,27 @@
+LOG_LEVEL=-1/0/1        # -1 quite, 0 info, 1 all
+
+### Configurate a connection to database
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=your_password
 DB_NAME=doghub_db
 
-MAIL_USER=user@gmail.com
-MAIL_PASSWORD=app_password
+
+### Email service settings for notifications
+# If mail_service off, another settings isn't required
+MAIL_SERVICE=ON/OFF
+
+# email sender account
+MAIL_HOST=user@gmail.com        # corporative email
+MAIL_PASSWORD=app_password      # app pass is different from email pass
+
+# File to send as message
+# Can receive params in text will be replaced as $$
+# To pass params see MailService/MailService.cs
 MAIL_FILE_PATH=MailNotification.html
+
+# Time in seconds between emails checks
 MAIL_TIMEOUT=60
 
 JWT_ISSUER=DogHubApi
