--- a/Server/DogHub/DogHub.csproj
+++ b/Server/DogHub/DogHub.csproj
@@ -10,6 +10,8 @@
         <ItemGroup>
                 <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
                 <PackageReference Include="DotNetEnv" Version="3.1.1" />
+                <PackageReference Include="itext7" Version="9.4.0" />
+                <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.4.0" />
                 <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
                 <PackageReference Include="Npgsql" Version="9.0.4" />
         </ItemGroup>
