--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,6 +1,9 @@
 server {
-    listen 80;
-    server_name _;
+    listen 443 ssl;
+    server_name dog-hub.ru www.dog-hub.ru;
+
+    ssl_certificate     /etc/nginx/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/certificate.key;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -16,7 +19,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # для SPA - всё остальное в index.html
+    # для SPA – всё остальное в index.html
     location / {
         try_files $uri /index.html;
     }
