--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -8,7 +8,7 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # прокси к API
+    # API
     location /api/ {
         proxy_pass http://api:8080/;
         proxy_http_version 1.1;
@@ -19,8 +19,31 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # для SPA – всё остальное в index.html
+   # Картинки пользователей
+    location /Users/ {
+        proxy_pass http://host.docker.internal:5000;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Картинки собак
+    location /Dogs/ {
+        proxy_pass http://host.docker.internal:5000;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # SPA
     location / {
         try_files $uri /index.html;
     }
 }
+
