--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   api:
     build:
@@ -11,11 +9,10 @@ services:
       - ./Assets:/app/Assets:ro
     environment:
       ASPNETCORE_ENVIRONMENT: "Production"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"    
     networks:
       - backend
-    # можно оставить или убрать внешний порт, как тебе нужно:
-    # ports:
-    #   - "6000:8080"
 
   client:
     build:
@@ -27,6 +24,8 @@ services:
       - api
     ports:
       - "443:443"      # HTTPS снаружи -> HTTPS внутри контейнера
+    extra_hosts:
+      - "host.docker.internal:host-gateway"  
     networks:
       - backend
 
