--- a/Assets/.env.example
+++ b/Assets/.env.example
@@ -17,9 +17,10 @@ MAIL_HOST=user@gmail.com        # corporative email
 MAIL_PASSWORD=app_password      # app pass is different from email pass
 
 # File to send as message
+# Path is releative from Server/DogHub/
 # Can receive params in text will be replaced as $$
 # To pass params see MailService/MailService.cs
-MAIL_FILE_PATH=MailNotification.html
+MAIL_FILE_PATH=../../Assets/MailNotification.html
 
 # Time in seconds between emails checks
 MAIL_TIMEOUT=60
