--- a/Assets/.env.example
+++ b/Assets/.env.example
@@ -9,7 +9,7 @@ LOG_LEVEL=-1/0/1        # -1 quite, 0 info, 1 all
 PATH_TO_FONTS = ../../Assets/Fonts/
 
 ### Конфигурация подключения к БД
-DB_HOST=localhost
+DB_HOST=dog-hub.ru
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=your_password
