--- a/Server/DogHub/DogHub.csproj
+++ b/Server/DogHub/DogHub.csproj
@@ -14,6 +14,7 @@
                 <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.4.0" />
                 <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
                 <PackageReference Include="Npgsql" Version="9.0.4" />
+		<PackageReference Include="SSH.NET" Version="2024.1.0" />
         </ItemGroup>
 
 </Project>
