--- a/Assets/.env.example
+++ b/Assets/.env.example
@@ -1,41 +1,28 @@
 
-### Настройки Сервера
 LOG_LEVEL=-1/0/1        # -1 quite, 0 info, 1 all
 
-# Относительный путь считается от директории Server/DogHub/
-# Может быть использован полный путь
-# Путь обязательно должен завершаться символом "/"
-# Например, /home/userName/DogHub/Assets/Fonts/
 PATH_TO_FONTS = ../../Assets/Fonts/
 
-### Конфигурация подключения к БД
 DB_HOST=dog-hub.ru
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=your_password
 DB_NAME=doghub_db
 
-
-### Настройки сервиса email уведомлений
-# Если сервис выключен остальные параметры указывать не обязательно
 MAIL_SERVICE=ON/OFF
-
-# Host аккаунт отправки уведомлений
-MAIL_HOST=user@gmail.com
-# Пароль приложения отличается от пароля почты      
+MAIL_HOST=user@gmail.com  
 MAIL_PASSWORD=app_password
-
-# Путь к html форме отправки сообщений
-# Относительный путь от Server/DogHub/
-# Может быть указан полный путь
-# Файл принимает в тексте параметры которые будут замещать символ $$
-# Как параметры передаются в форму можно уведеть в классе MailService
 MAIL_FILE_PATH=../../Assets/MailNotification.html
-
-# Time in seconds between emails checks
 MAIL_TIMEOUT=60
 
 JWT_ISSUER=DogHubApi
 JWT_AUDIENCE=DogHubClient
 JWT_SECRET=super_secret_key_change_me_very_long_123456
 ACCESS_TOKEN_LIFETIME_MINUTES=30
+
+SSH_HOST=your_ssh_host
+SSH_PORT=your_ssh_port
+SSH_USER=your_ssh_user
+SSH_PASSWORD=your_ssh_password
+AVATAR_REMOTE_DIR=your_dir
+AVATAR_PUBLIC_BASE_URL=your_url
