Add config param to load photos from host url

--- a/Assets/.env.example
+++ b/Assets/.env.example
@@ -1,7 +1,7 @@
 
 LOG_LEVEL=-1/0/1        # -1 quite, 0 info, 1 all
-
 PATH_TO_FONTS = ../../Assets/Fonts/
+IMAGE_HOST=your_url
 
 DB_HOST=dog-hub.ru
 DB_PORT=5432
