--- a/Assets/.env.example
+++ b/Assets/.env.example
@@ -20,6 +20,11 @@ JWT_AUDIENCE=DogHubClient
 JWT_SECRET=super_secret_key_change_me_very_long_123456
 ACCESS_TOKEN_LIFETIME_MINUTES=30
 
+REFRESH_TOKEN_LIFETIME_DAYS=14
+REFRESH_COOKIE_DOMAIN=                  # пусто для localhost, в проде: .doghub.ru
+REFRESH_COOKIE_SECURE=false             # true только если сайт целиком по HTTPS
+CORS_ALLOWED_ORIGINS=http://localhost:5173
+
 SSH_HOST=your_ssh_host
 SSH_PORT=your_ssh_port
 SSH_USER=your_ssh_user
