Added new service page

--- a/Assets/.env.example
+++ b/Assets/.env.example
@@ -1,6 +1,5 @@
-
 LOG_LEVEL=-1/0/1        # -1 quite, 0 info, 1 all
-PATH_TO_FONTS = ../../Assets/Fonts/
+PATH_TO_FONTS=../../Assets/Fonts/
 IMAGE_HOST=your_url
 
 DB_HOST=dog-hub.ru
@@ -30,4 +29,5 @@ SSH_PORT=your_ssh_port
 SSH_USER=your_ssh_user
 SSH_PASSWORD=your_ssh_password
 AVATAR_REMOTE_DIR=your_dir
+DOG_PHOTO_REMOTE_DIR=your_dir
 AVATAR_PUBLIC_BASE_URL=your_url
